# build-system-example

./: .gitignore  CMakeLists.txt  README.md  main.c
examples/: example1.c
include/: logger.h
src/: logger.c
test/utest/: test__logger.c
